--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,15 @@
  h1, h2, h3 {
      font-family: 'Open Sans', sans-serif;
  }
+ 
+ body {
+  
+ background: #ffe259;  /* fallback for old browsers */
+ background: -webkit-linear-gradient(to right, #ffa751, #ffe259);  /* Chrome 10-25, Safari 5.1-6 */
+ background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ }
+
+.navbar {
+ background-color: #FFF;
+ border: none;
+}
