--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome to our homepage.</h1>
+<div class="home-callout text-center container-fluid">
+    <h1>Welcome to our homepage.</h1>
+    <h3>Secondary headline goes here.</h3>
+</div>
