--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,8 +27,30 @@
   background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  }
  
+ .home-callout {
+  padding-top: 25px;
+  padding-bottom: 75px;
+ }
+ 
+.navbar-default .navbar-brand {
+  color: #000;
+ }
+ 
+.navbar-default .navbar-brand:hover {
+  color: #000;
+  opacity: 0.75;
+ }
+ 
+.navbar-default .navbar-nav > li > a {
+ color: #000;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+ color: #000;
+ opacity: 0.75;
+}
+ 
 .navbar {
  margin-bottom: 0;
- background-color: #FFF;
  border: none;
 }
