--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,39 +17,34 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+/* typography styles */
  h1, h2, h3 {
      font-family: 'Open Sans', sans-serif;
  }
  
+/* background gradient */
 .home-callout, .navbar {
   background: #ffe259;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ffa751, #ffe259);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ffa751, #ffe259); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
  }
  
+ /* Homepage Styles */
  .home-callout {
   padding-top: 25px;
   padding-bottom: 75px;
  }
  
-.navbar-default .navbar-brand {
+ /* Nav Styles */
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
   color: #000;
- }
- 
-.navbar-default .navbar-brand:hover {
-  color: #000;
-  opacity: 0.75;
- }
- 
-.navbar-default .navbar-nav > li > a {
- color: #000;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
- color: #000;
- opacity: 0.75;
+  &:hover {
+   color: #000;
+   opacity: 0.75;
+  }
 }
  
+/* Remove Nav bottom margin */
 .navbar {
  margin-bottom: 0;
  border: none;
