--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Us</h1>
+<div class="container text-center">
+    <h1>About Us</h1>
+    <p>A description of our platform goes here.  We focus on creating an exclusive 
+    community for developers and entrepreneurs to meet.</p>
+</div>
