--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,27 +1,26 @@
-<%= form_for "/contacts" do |f| %>
-  <div class="container">
-    <div class="row">
-      <h3 class="text-center">Contact Us</h3>
-       <div class="col-md-6 col-md-offset-3">
-          <div class="well">
-            <%= form_for "/contacts" do |f| %>
-              <div class="form-group">
-                <%= f.label :name %>
-                <%= f.text_field :name, class: 'form-control' %>
-              </div>
-              <div class="form-group">
-                <%= f.label :email %>
-                <%= f.text_field :email, class: 'form-control' %>
-              </div>
-              <div class="form-group">
-                <%= f.label :message %>
-                <%= f.text_area :comments, class: 'form-control' %>
-              </div>
-              <%= f.submit 'Submit', class: 'btn btn-default' %>
-            <% end %>
+<div class="container">
+  <div class="row">
+    <h3 class="text-center">Contact Us</h3>
+    
+    <div class="col-md-4 col-md-offset-4">
+      <%= flash[:notice] %>
+      <div class="well">
+        <%= form_for @contact do |f| %>
+          <div class="form-group">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: 'form-control' %>
           </div>
-        </div>
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.text_field :email, class: 'form-control' %>
+          </div>
+          <div class="form-group">
+            <%= f.label :comments %>
+            <%= f.text_area :comments, class: 'form-control' %>
+          </div>
+          <%= f.submit 'Submit', class: 'btn btn-default' %>
+        <% end %>
       </div>
     </div>
-  <% end %>
+  </div>
 </div>
