Added membership plans

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,3 +67,8 @@
  font-family: '0pen Sans', sans-serif;
  font-weight: 600;
 }
+
+/* Remove alert text indicating user was signed-out successfully */
+.alert-notice {
+  display: none;
+}
