--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -1,5 +1,7 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {id: 'pro_form'} ) do |f| %>
   <%= devise_error_messages! %>
+  
+   <%= hidden_field_tag 'plan', params[:plan] %>
 
   <div class="field form-group">
     <%= f.label :email %><br />
@@ -23,7 +25,7 @@
     <%= label_tag :card_number, "Credit Card Number" %>
     <%= text_field_tag :card_number, nil, name: nil, class: "form-control" %>
   </div>
-  
+ 
   <div class="field form-group">
     <%= label_tag :card_code, "Security Code on Card (CVV)" %>
     <%= text_field_tag :card_code, nil, name: nil, class: "form-control" %>
@@ -36,6 +38,6 @@
   </div>
 
   <div class="actions form-group">
-    <%= f.submit "Sign up", class: 'btn btn-success' %>
+    <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-submit-btn' %>
   </div>
 <% end %>
